--- a/style.css
+++ b/style.css
@@ -479,3 +479,9 @@ body {
   color: var(--white);
   font-size: 1.5rem;
 }
+
+.logo {
+  height: 90; /* keeps it same size as the droplet */
+  width: auto; /* maintains aspect ratio */
+  max-width: 100%; /* prevents overflow */
+}
